# ORPHEUS

./: .gitignore  .mcp.json  CLAUDE.md  README.md  ReadMe.md  gotchas.md  pyproject.toml  requirements.txt
.claude/: lessons.md  settings.json
01.Homogeneous.Reactors/: IMPROVEMENTS.md  homogeneous.py
02.Discrete.Ordinates/: IMPROVEMENTS.md  TODO_cylindrical_dd.md  demo_discrete_ordinates.py  demo_discrete_ordinates_1d.py  discrete_ordinates.py  numerical_notes.md  plotting.py  run_discrete_ordinates.py  sn_1d.py  sn_geometry.py  sn_operator.py  sn_quadrature.py  sn_solver.py  sn_sweep.py
03.Method.Of.Characteristics/: IMPROVEMENTS.md  method_of_characteristics.py  plotting.py  run_moc.py
04.Monte.Carlo/: IMPROVEMENTS.md  monte_carlo.py  plotting.py
05.Diffusion.1D/: IMPROVEMENTS.md  demo_diffusion_1d.py  diffusion_1d.py
06.Fuel.Behaviour/: IMPROVEMENTS.md  fuel_behaviour.py
07.Thermal.Hydraulics/: thermal_hydraulics.py
08.Reactor.Kinetics.0D/: reactor_kinetics.py
09.Collision.Probability/: IMPROVEMENTS.md  collision_probability.py  demo_cp_concentric.py  demo_cp_slab.py  plotting.py  run_cp_concentric.py  run_verification.py
data/: IMPROVEMENTS.md
derivations/: IMPROVEMENTS.md  TODO_transport_eigenmodes.md  _xs_library.py  cp_cylinder.py  cp_slab.py  cp_sphere.py  diffusion.py  generate_rst.py  homogeneous.py  l0_sn.py  mc.py  moc.py  peierls_class_b_rank_n_normalization.py  peierls_cylinder_3d_mode_n.py  peierls_cylinder_g_bc_3d_derivation.py  peierls_specular_continuous_mu.py  reference_values.py  sn.py
docs/: conf.py  development.rst  index.rst
(+471 files in other folders)
